gst-libs/gst/gl/cocoa/gstgl_cocoa_private.h
@@ -59,7 +59,7 @@ struct _GstGLContextCocoaPrivate
 
 gboolean gst_gl_window_cocoa_create_window (GstGLWindowCocoa *window_cocoa);
 
-void _invoke_on_main (GstGLWindowCB func, gpointer data);
+void _invoke_on_main (GstGLWindowCB func, gpointer data, GDestroyNotify notify);
 
 G_END_DECLS
 
