gst-libs/gst/gl/cocoa/gstglcontext_cocoa.m
@@ -254,7 +254,7 @@ gst_gl_context_cocoa_create_context (GstGLContext *context, GstGLAPI gl_api,
   context_cocoa->priv->gl_context = glContext;
 
   _invoke_on_main ((GstGLWindowCB) gst_gl_window_cocoa_create_window,
-      window_cocoa);
+      gst_object_ref (window_cocoa), (GDestroyNotify) gst_object_unref);
 
   if (!context_cocoa->priv->gl_context) {
     goto error;
